# mytube

./: .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 20240527_01_initial_schema.py  20240603_01_expand_resource_labels.py  20240608_01_add_channel_title_to_videos.py  20240701_01_label_primary_key_and_disqualifiers.py
src/mytube/: __init__.py  __main__.py  casting.py  db.py  lounge.py  web.py  youtube.py  ytlounge.py
src/mytube/static/: configure.css  home.css
src/mytube/templates/: configure.html  home.html
src/mytube/templates/configure/: base.html  channel_resource.html  channels_overview.html  history.html  history_event.html  index.html  listed_resources.html  listed_videos.html  playlist_resource.html  playlists_overview.html  raw_payload.html  settings.html  video_resource.html  videos_overview.html
tests/: conftest.py  test_casting.py  test_configure_settings.py  test_configure_videos.py  test_home_playing.py  test_listed_videos.py  test_lounge_playback.py  test_ytlounge.py
