[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mytube"
version = "0.1.0"
description = "Simple Chromecast remote for a recommended YouTube video."
requires-python = ">=3.11"
dependencies = [
    "Flask>=3.0",
    "PyChromecast>=13.0",
]

[project.scripts]
mytube = "mytube.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
