[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mytube"
version = "0.1.0"
description = "Simple YouTube remote for a curated video collection."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "pyytlounge>=3.2.0",
    "uvicorn>=0.22",
    "python-multipart>=0.0.9",
    "sqlmodel>=0.0.14",
]

[project.scripts]
mytube = "mytube.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
